Bug 468396 - WindowHeap-based effects are not interactive with a stylus
Summary: WindowHeap-based effects are not interactive with a stylus
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-window-management (other bugs)
Version First Reported In: 5.92.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 479710 483078 493731 522679 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-04-11 17:22 UTC by Matt
Modified: 2026-07-16 10:35 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt 2023-04-11 17:22:22 UTC
SUMMARY
When a wacom tablet is plugged in and the overview desktop effect is launched the mouse cursor freezes and it is impossible to move the mouse / select windows using the tablet (you are able to move the mouse with a physical mouse however, but not use the drawing tablet)

STEPS TO REPRODUCE
1. Plug in a drawing tablet to a wayland session
2.  Open the overview effect (via shortcut)

OBSERVED RESULT
The cursor can't be moved / windows can't be selected by using the tablet, but can be selected with the mouse

EXPECTED RESULT
It should be possible to select windows using the drawing tablet

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 5.19.0-38-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 unblended_icing552 2023-09-20 14:16:54 UTC
Reproducible in KDE Plasma version 5.27.8 on openSUSE. Touch input aren't affected, only stylus input are.
Comment 2 Shubham Arora 2023-12-11 13:25:20 UTC
Also Applicable for Plasma 6

Operating System: EndeavourOS 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.6.1-arch1-1-g14 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 6800HS with Radeon Graphics
Memory: 14.9 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Flow X13 GV301RA
System Version: 1.0
Comment 3 fanzhuyifan 2024-01-13 00:13:40 UTC
*** Bug 479710 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2025-11-30 19:25:19 UTC
*** Bug 483078 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2025-11-30 19:25:51 UTC
*** Bug 493731 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2025-11-30 21:07:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8508
Comment 7 Yavuz 2026-05-23 18:15:51 UTC Comment hidden (spam)
Comment 8 Nicolas Fella 2026-07-06 23:35:45 UTC
*** Bug 522679 has been marked as a duplicate of this bug. ***
Comment 9 Nicolas Fella 2026-07-08 18:21:05 UTC
Git commit 3d2c5f7cd56391347e6e3d41c4d5931e1a1b5f16 by Nicolas Fella.
Committed on 08/07/2026 at 17:32.
Pushed by nicolasfella into branch 'master'.

effects: Forward tablet events to OffscreenQuickView

By converting them to mouse events
Related: bug 522677

M  +2    -0    src/effect/offscreenquickview.h
M  +35   -0    src/effect/quickeffect.cpp
M  +3    -0    src/effect/quickeffect.h

https://invent.kde.org/plasma/kwin/-/commit/3d2c5f7cd56391347e6e3d41c4d5931e1a1b5f16
Comment 10 Zamundaaa 2026-07-08 20:25:54 UTC
Git commit 19bb332307ec78453d1779a113796ba59d872690 by Xaver Hugl, on behalf of Nicolas Fella.
Committed on 08/07/2026 at 19:03.
Pushed by zamundaaa into branch 'Plasma/6.7'.

effects: Forward tablet events to OffscreenQuickView

By converting them to mouse events
Related: bug 522677


(cherry picked from commit 3d2c5f7cd56391347e6e3d41c4d5931e1a1b5f16)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +2    -0    src/effect/offscreenquickview.h
M  +35   -0    src/effect/quickeffect.cpp
M  +3    -0    src/effect/quickeffect.h

https://invent.kde.org/plasma/kwin/-/commit/19bb332307ec78453d1779a113796ba59d872690
Comment 11 Johnny 2026-07-16 10:35:43 UTC
I confirm that this bug has been fixed in Plasma 6.7.3.

Operating System: Arch Linux 
KDE Plasma Version: 6.7.3
KDE Frameworks Version: 6.28.0
Qt Version: 6.11.1
Kernel Version: 7.1.3-arch1-3 (64-bit)
Graphics Platform: Wayland