effects: Forward tablet events to OffscreenQuickView

This allows effects based on it to handle tablet input

BUG: 468396