src/effect/quickeffect.h
@@ -161,6 +161,9 @@ public:
     bool touchMotion(qint32 id, const QPointF &pos, std::chrono::microseconds time) override;
     bool touchUp(qint32 id, std::chrono::microseconds time) override;
     void touchCancel() override;
+    bool tabletToolProximity(TabletToolProximityEvent *event) override;
+    bool tabletToolAxis(TabletToolAxisEvent *event) override;
+    bool tabletToolTip(TabletToolTipEvent *event) override;
 
     static bool supported();
 
